tests/res/assignment/error_lvalue_fn.say
fn hello() {}
fn world() {}
hello = world; // error: Cannot reassign 'hello'; it names a function